--- a/team/ali/ali.html
+++ b/team/ali/ali.html
@@ -30,7 +30,19 @@
 
       <section id="box4" class="box"></section>
 
-      <section id="box5" class="box"></section>
+      <section id="box5" class="box">
+        <fieldset id="form">
+          <label for="answer" id="label">1 + 1 =</label>
+          </br>
+          <button id="button1" class="button">2</button>
+          </br>
+          <button id="button2" class="button">-77</button>
+          </br>
+          <button id="button3" class="button">55</button>
+          </br>
+          <button id="button4" class="button">2</button>
+        </fieldset>
+      </section>
 
       <section id="box6" class="box"></section>
 
