--- a/team/danya/danya.html
+++ b/team/danya/danya.html
@@ -30,7 +30,19 @@
 
       <section id="box4" class="box"></section>
 
-      <section id="box5" class="box"></section>
+      <section id="box5" class="box">
+        <fieldset id="form">
+          <label for="answer" id="label"></label>
+          </br>
+          <button id="button1" class="button"></button>
+          </br>
+          <button id="button2" class="button"></button>
+          </br>
+          <button id="button3" class="button"></button>
+          </br>
+          <button id="button4" class="button"></button>
+        </fieldset>
+      </section>
 
       <section id="box6" class="box"></section>
 
