css button style

--- a/team/ali/ali.html
+++ b/team/ali/ali.html
@@ -34,7 +34,7 @@
         <fieldset id="form">
           <label for="answer" id="label">1 + 1 =</label>
           </br>
-          <button id="button1" class="button">2</button>
+          <button id="button1" class="button" data-back="SURE?">2</button>
           </br>
           <button id="button2" class="button">-77</button>
           </br>
