--- a/team/musab/musab.html
+++ b/team/musab/musab.html
@@ -16,6 +16,14 @@
 
   <main>
 
+    <section id="alert">
+      <section id="alert-box">
+        <p id="alert-text">ALERT</p>
+        </br>
+        <button id="alert-button">TRY AGAIN</button>
+      </section>
+    </section>
+
     <section id="row1" class="row">
 
       <section id="box1" class="box"></section>
