--- a/team/ali/ali.html
+++ b/team/ali/ali.html
@@ -26,9 +26,18 @@
 
     <section id="row1" class="row">
 
-      <section id="box1" class="box"></section>
+      <section id="box1" class="box">
+        <section id="fake1">
+          <figure id="fig1"></figure>
+          <figure id="fig1-2"></figure>
+        </section>
+      </section>
 
-      <section id="box2" class="box"></section>
+      <section id="box2" class="box">
+        <section id="fake2">
+          <figure id="fig2"></figure>
+        </section>
+      </section>
 
       <section id="box3" class="box"></section>
 
@@ -36,7 +45,11 @@
 
     <section id="row2" class="row">
 
-      <section id="box4" class="box"></section>
+      <section id="box4" class="box">
+        <section id="fake4">
+          <figure id="fig4"></figure>
+        </section>
+      </section>
 
       <section id="box5" class="box">
         <fieldset id="form">
