finished html and css

--- a/team/ali/ali.html
+++ b/team/ali/ali.html
@@ -96,7 +96,11 @@
         </section>
       </section>
 
-      <section id="box9" class="box"></section>
+      <section id="box9" class="box">
+        <section id="fake9">
+          <figure id="fig9"></figure>
+        </section>
+      </section>
 
     </section>
 
