dalia quiz added

--- a/team/dalia/dalia.html
+++ b/team/dalia/dalia.html
@@ -10,60 +10,29 @@
   <title>Box</title>
 </head>
 <body>
+ 
   <header>
     <h1>BOX</h1>
   </header>
 
   <main>
 
-    <section id="row1" class="row">
-
-      <section id="box1" class="box"></section>
-
-      <section id="box2" class="box"></section>
-
-      <section id="box3" class="box"></section>
-
-    </section>
-
-    <section id="row2" class="row">
-
-      <section id="box4" class="box"></section>
-
-      <section id="box5" class="box">
-        <fieldset id="form">
-          <label for="answer" id="label"></label>
-          </br>
-          <button id="button1" class="button"></button>
-          </br>
-          <button id="button2" class="button"></button>
-          </br>
-          <button id="button3" class="button"></button>
-          </br>
-          <button id="button4" class="button"></button>
-        </fieldset>
-      </section>
-
-      <section id="box6" class="box"></section>
-
-    </section>
-
-    <section id="row3" class="row">
-
-      <section id="box7" class="box"></section>
-
-      <section id="box8" class="box"></section>
-
-      <section id="box9" class="box"></section>
-
-    </section>
+  <section id=question>
+    <img src ="" id="image"/>
+    <p id="questionText"></p>
+    <input type ="text" id="input"> <button id="submitAnswer">Submit</button><br>
+    <button id="showAnswerBtn" class="button">Show the answer</button>
+    <p id="message"></p> <br>
+  </section>
 
   </main>
-
+  <embed src="dalia.img/music_preview.mp3" loop="true" autostart="true" width="2" height="0">
   <footer>
     <h1>FOOTER</h1>
   </footer>
+  
   <script src="../../js/app.js"></script>
   <script src="./dalia.js"></script>
+
 </body>
 </html>
