--- a/team/ali/ali.html
+++ b/team/ali/ali.html
@@ -11,7 +11,8 @@
 </head>
 <body>
   <header>
-    <h1>BOX</h1>
+    <h1><a href="../../index.html" id="home">WHAT THE BOX</a></h1>
+    <p id="level-tracker">level <span id="level"></span>/15</p>
   </header>
 
   <main id="main">
@@ -61,7 +62,7 @@
         <fieldset id="form">
           <label for="answer" id="label">1 + 1 =</label>
           </br>
-          <button id="button1" class="button" data-back="SURE?">2</button>
+          <button id="button1" class="button">2</button>
           </br>
           <button id="button2" class="button">-77</button>
           </br>
@@ -107,7 +108,13 @@
   </main>
 
   <footer>
-    <h1>FOOTER</h1>
+    <h1>OUTSIDE THE BOX
+    </br></br>Developed by
+    </br>Ayah Abu Hammad
+    </br>Dalia Abdelghani
+    </br>Mohammad Amer
+    </br>Mus'ab Al-Omari
+    </br>Ali Sartawi</h1>
   </footer>
   <script src="../../js/app.js"></script>
   <script src="./ali.js"></script>
