--- a/team/musab/musab.html
+++ b/team/musab/musab.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
   <link rel="stylesheet" href="./musab.css">
   <title>Box</title>
 </head>
+
 <body>
   <header>
     <h1>BOX</h1>
@@ -16,9 +18,17 @@
 
   <main>
 
+    <img src="/team/musab/img/Fanimation-Kwad-44-inch-1.gif" alt="" id="Fan">
+
+    <a href="/team/musab/musab1.html"><div id="divo"></div></a>
+
+
     <section id="alert">
       <section id="alert-box">
-        <p id="alert-text">ALERT</p>
+        <p id="alert-text">Did you get the idea ? <br> the box is empty <br> thats was your final hint </p>
+        </br>
+        </br>
+        </br>
         </br>
         <button id="alert-button">TRY AGAIN</button>
       </section>
@@ -26,9 +36,17 @@
 
     <section id="row1" class="row">
 
-      <section id="box1" class="box"></section>
+      <section id="box1" class="box">
 
-      <section id="box2" class="box"></section>
+        <!-- <img src="/team/musab/img/Capture.PNG" alt="image" id="firstTarget"> -->
+
+      </section>
+
+      <section id="box2" class="box">
+
+
+
+      </section>
 
       <section id="box3" class="box"></section>
 
@@ -39,20 +57,16 @@
       <section id="box4" class="box"></section>
 
       <section id="box5" class="box">
-        <fieldset id="form">
-          <label for="answer" id="label"></label>
-          </br>
-          <button id="button1" class="button"></button>
-          </br>
-          <button id="button2" class="button"></button>
-          </br>
-          <button id="button3" class="button"></button>
-          </br>
-          <button id="button4" class="button"></button>
-        </fieldset>
+        <div id="answers"></div>
+
+
+
+
+
+
       </section>
 
-      <section id="box6" class="box"></section>
+      <section id="box6" class="box"> </section>
 
     </section>
 
@@ -62,16 +76,20 @@
 
       <section id="box8" class="box"></section>
 
-      <section id="box9" class="box"></section>
+      <section id="box9" class="box">
+      </section>
 
     </section>
-
+    <p id="ps">
+      keep the zoom at 100% to solve this one
+    </p>
   </main>
 
   <footer>
     <h1>FOOTER</h1>
   </footer>
-  <script src="../../js/app.js"></script>
   <script src="./musab.js"></script>
+  <script src="../../js/app.js"></script>
 </body>
+
 </html>
