--- a/team/ali/ali.html
+++ b/team/ali/ali.html
@@ -60,15 +60,15 @@
       <!-- THE FORM -->
       <section id="box5" class="box">
         <fieldset id="form">
-          <label for="answer" id="label">1 + 1 =</label>
+          <label for="answer" id="label"></label>
           </br>
-          <button id="button1" class="button">2</button>
+          <button id="button1" class="button"></button>
           </br>
-          <button id="button2" class="button">-77</button>
+          <button id="button2" class="button"></button>
           </br>
-          <button id="button3" class="button">55</button>
+          <button id="button3" class="button"></button>
           </br>
-          <button id="button4" class="button">2</button>
+          <button id="button4" class="button"></button>
         </fieldset> 
       </section>
       <!-- FORM END -->
