add buttoms for third qustion

--- a/team/musab/musab.html
+++ b/team/musab/musab.html
@@ -25,7 +25,7 @@
 
     <section id="alert">
       <section id="alert-box">
-        <p id="alert-text">Did you get the idea ? <br> the box is empty <br> thats was your final hint </p>
+        <p id="alert-text"></p>
         </br>
         </br>
         </br>
