--- a/team/musab/musab1.html
+++ b/team/musab/musab1.html
@@ -17,6 +17,20 @@
         <div id="answer"></div>
     </header>
     <main>
+
+        <section id="alert">
+            <section id="alert-box">
+              <p id="alert-text"></p>
+              </br>
+              </br>
+              </br>
+              </br>
+              <button id="alert-button">TRY AGAIN</button>
+            </section>
+          </section>
+
+
+
         <img src="/team/musab/img/chicken_PNG2144.png" alt="" id="2chicken">
         <img src="/team/musab/img/unnamed.png" alt="" id="plus">
         <img src="/team/musab/img/pngwing.com.png" alt="" id="pen">
