--- a/team/ayah/ayah.html
+++ b/team/ayah/ayah.html
@@ -11,7 +11,8 @@
 </head>
 <body>
   <header>
-    <h1>BOX</h1>
+    <h1><a href="../../index.html" id="home">WHAT THE BOX</a></h1>
+    <p id="level-tracker">level <span id="level"></span>/15</p>
   </header>
   <main>
     <main>
@@ -71,7 +72,13 @@
     
   </main>
   <footer>
-    <h1>FOOTER</h1>
+    <h1>OUTSIDE THE BOX
+    </br></br>Developed by
+    </br>Ayah AbuHammad
+    </br>Dalia Abdelghani
+    </br>Mohammad Amer
+    </br>Mus'ab Al-Omari
+    </br>Ali Sartawi</h1>
   </footer>
   <script src="../../js/app.js"></script>
   <script src="ayah.js"></script>
