--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@
   </main>
 
   <footer>
-    <h1>OUTSIDE THE BOX
+    <h1>WHAT THE BOX
     </br></br>Developed by
     </br>Ayah Abu Hammad
     </br>Dalia Abdelghani
     </br>Mohammad Amer
     </br>Mus'ab Al-Omari
-    </br>Ali Sartawi</h1>
+    </br>Ali Sartawi
+    </br></br>&copy; 2021 201-project</h1>
   </footer>
   <script src="./js/app.js"></script>
   <script src="./js/index.js"></script>
