--- a/team/ali/ali.html
+++ b/team/ali/ali.html
@@ -108,13 +108,14 @@
   </main>
 
   <footer>
-    <h1>OUTSIDE THE BOX
+    <h1>WHAT THE BOX
     </br></br>Developed by
     </br>Ayah Abu Hammad
     </br>Dalia Abdelghani
     </br>Mohammad Amer
     </br>Mus'ab Al-Omari
-    </br>Ali Sartawi</h1>
+    </br>Ali Sartawi
+    </br></br>&copy; 2021 201-project</h1>
   </footer>
   <script src="../../js/app.js"></script>
   <script src="./ali.js"></script>
