--- a/team/dalia/dalia.html
+++ b/team/dalia/dalia.html
@@ -12,24 +12,32 @@
 <body>
  
   <header>
-    <h1>BOX</h1>
+    <h1><a href="../../index.html" id="home">WHAT THE BOX</a></h1>
+    <p id="level-tracker">level <span id="level"></span>/15</p>
   </header>
 
   <main>
 
-  <section id=question>
-    <img src ="" id="image"/>
-    <p id="questionText"></p>
-    <input type ="text" id="input"> <button id="submitAnswer">Submit</button><br>
-    <button id="showAnswerBtn" class="button">Show the answer</button>
-    <p id="message"></p> <br>
-  </section>
+    <section id=question>
+      <img src ="" id="image"/>
+      <p id="questionText"></p>
+      <input type ="text" id="input"> <button id="submitAnswer">Submit</button><br>
+      <button id="showAnswerBtn" class="button">Show the answer</button>
+      <p id="message"></p> <br>
+    </section>
 
   </main>
   <embed src="dalia.img/music_preview.mp3" loop="true" autostart="true" width="2" height="0">
-  <footer>
-    <h1>FOOTER</h1>
-  </footer>
+
+    <footer>
+      <h1>OUTSIDE THE BOX
+      </br></br>Developed by
+      </br>Ayah Abu Hammad
+      </br>Dalia Abdelghani
+      </br>Mohammad Amer
+      </br>Mus'ab Al-Omari
+      </br>Ali Sartawi</h1>
+    </footer>
   
   <script src="../../js/app.js"></script>
   <script src="./dalia.js"></script>
