--- a/team/mohammad/mohammad.html
+++ b/team/mohammad/mohammad.html
@@ -7,71 +7,31 @@
   <link rel="stylesheet" href="../../css/reset.css">
   <link rel="stylesheet" href="../../css/style.css">
   <link rel="stylesheet" href="./mohammad.css">
-  <title>Box</title>
+  <title>Emoji Box</title>
 </head>
 <body>
   <header>
-    <h1>BOX</h1>
+    <h1><a href="../../index.html" id="home">WHAT THE BOX</a></h1>
+    <p id="level-tracker">level <span id="level"></span>/19</p>
   </header>
 
   <main>
-
-    <section id="alert">
-      <section id="alert-box">
-        <p id="alert-text">ALERT</p>
-        </br>
-        <button id="alert-button">TRY AGAIN</button>
+    <div class="content-box">
+      <div id="settings">
+      </div>
+      <section id="form" class="card-container flip-card">
+        <label for="answer" id="label"></label>
+        <p id="emoji"></p>
+        <button id="button1" class="button"></button>
+        <button id="button2" class="button"></button>
+        <button id="button3" class="button"></button>
+        <button id="button4" class="button"></button>
       </section>
-    </section>
-
-    <section id="row1" class="row">
-
-      <section id="box1" class="box"></section>
-
-      <section id="box2" class="box"></section>
-
-      <section id="box3" class="box"></section>
-
-    </section>
-
-    <section id="row2" class="row">
-
-      <section id="box4" class="box"></section>
-
-      <section id="box5" class="box">
-        <fieldset id="form">
-          <label for="answer" id="label"></label>
-          </br>
-          <button id="button1" class="button"></button>
-          </br>
-          <button id="button2" class="button"></button>
-          </br>
-          <button id="button3" class="button"></button>
-          </br>
-          <button id="button4" class="button"></button>
-        </fieldset>
-      </section>
-
-      <section id="box6" class="box"></section>
-
-    </section>
-
-    <section id="row3" class="row">
-
-      <section id="box7" class="box"></section>
-
-      <section id="box8" class="box"></section>
-
-      <section id="box9" class="box"></section>
-
-    </section>
-
   </main>
 
   <footer>
     <h1>FOOTER</h1>
   </footer>
-  <script src="../../js/app.js"></script>
   <script src="./mohammad.js"></script>
 </body>
 </html>
