homepage play again added

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
       <section id="box5" class="box">
         <fieldset id="form">
-          <label for="answer" class="label">If you want to challenge your brain...</label>
+          <label for="answer" class="label" id="label1">If you want to challenge your brain...</label>
           </br>
-          <label for="answer" class="label">If you want to test your patience...</label>
+          <label for="answer" class="label" id="label2">If you want to test your patience...</label>
           </br>
-          <label for="answer" class="label">If you want to regret entering this website...</label>
+          <label for="answer" class="label" id="label3">If you want to regret entering this website...</label>
           </br>
           <button id="button1" class="button">START GAME</button>
         </fieldset>
