99% of the work

--- a/team/musab/musab.html
+++ b/team/musab/musab.html
@@ -13,14 +13,14 @@
 
 <body>
   <header>
-    <h1><a href="/team/">sadjasjfBOX</a></h1>
+    <h1><a href="/team/">BOX</a></h1>
   </header>
 
   <main>
 
     <img src="/team/musab/img/Fanimation-Kwad-44-inch-1.gif" alt="" id="Fan">
 
-    <a href="/team/musab/musab1.html"><div id="divo"></div></a>
+    <div id="divo"></div>
 
 
     <section id="alert">
@@ -30,7 +30,7 @@
         </br>
         </br>
         </br>
-        <button id="alert-button">TRY AGAIN</button>
+        <button id="alert-button">OK</button>
       </section>
     </section>
 
@@ -80,9 +80,7 @@
       </section>
 
     </section>
-    <p id="ps">
-      keep the zoom at 100% to solve this one
-    </p>
+    
   </main>
 
   <footer>
