--- a/team/musab/musab1.html
+++ b/team/musab/musab1.html
@@ -25,18 +25,13 @@
               </br>
               </br>
               </br>
-              <button id="alert-button">TRY AGAIN</button>
+              <button id="alert-button">OK</button>
             </section>
           </section>
 
 
 
-        <img src="/team/musab/img/chicken_PNG2144.png" alt="" id="2chicken">
-        <img src="/team/musab/img/unnamed.png" alt="" id="plus">
-        <img src="/team/musab/img/pngwing.com.png" alt="" id="pen">
-        <img src="/team/musab/img/chicken_PNG2145.png" alt="" id="eqal">
-        <img src="/team/musab/img/Metal_Cup_with_Pens_PNG_Clip_Art-1271.png" alt="" id="onepen">
-
+        
         <section class="calculator-grid" id="calculator-grid">
             <section class="output">
                 <section data-previous-operand class="previous-operand">2chicken with 5 pens </section>
