--- a/team/ayah/ayah.html
+++ b/team/ayah/ayah.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../../css/reset.css">
   <link rel="stylesheet" href="../../css/style.css">
-  <link rel="stylesheet" href="./ayah.css">
+  <link rel="stylesheet" href="./ayahfinal.css">
   <title>Box</title>
 </head>
 <body>
   <header>
     <h1><a href="../../index.html" id="home">WHAT THE BOX</a></h1>
-    <p id="level-tracker">level <span id="level"></span>/15</p>
+    <p id="level-tracker">level <span id="level"></span>/19</p>
   </header>
   <main>
     <main>
@@ -71,16 +71,17 @@
   
     
   </main>
-  <embed src="./img/Haunted - 10 minutes Countdown Timer with Fast Clock Ticking (make you feel STRESS) FHD.mp3" loop="true" autostart="true" width="2" height="0">
-  <footer>
-    <h1>OUTSIDE THE BOX
-    </br></br>Developed by
-    </br>Ayah AbuHammad
-    </br>Dalia Abdelghani
-    </br>Mohammad Amer
-    </br>Mus'ab Al-Omari
-    </br>Ali Sartawi</h1>
-  </footer>
+  <!-- <embed src="./img/Haunted - 10 minutes Countdown Timer with Fast Clock Ticking (make you feel STRESS) FHD.mp3" loop="true" autostart="true" width="2" height="0"> -->
+    <footer>
+      <h1>WHAT THE BOX
+      </br></br>Developed by
+      </br>Ayah Abu Hammad
+      </br>Dalia Abdelghani
+      </br>Mohammad Amer
+      </br>Mus'ab Al-Omari
+      </br>Ali Sartawi
+      </br></br>&copy; 2021 201-project</h1>
+    </footer>
   <script src="../../js/app.js"></script>
   <script src="ayah.js"></script>
   
