changed some titles

--- a/team/ali/ali.html
+++ b/team/ali/ali.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../../css/reset.css">
   <link rel="stylesheet" href="../../css/style.css">
   <link rel="stylesheet" href="./ali.css">
-  <title>Box</title>
+  <title>WHAT THE BOX</title>
 </head>
 <body>
   <header>
