--- a/team/ayah/ayah.html
+++ b/team/ayah/ayah.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../../css/reset.css">
   <link rel="stylesheet" href="../../css/style.css">
   <link rel="stylesheet" href="./ayahfinal.css">
-  <title>Box</title>
+  <title>WHAT THE BOX</title>
 </head>
 <body>
   <header>
