--- a/team/mohammad/mohammad.html
+++ b/team/mohammad/mohammad.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../../css/reset.css">
   <link rel="stylesheet" href="../../css/style.css">
   <link rel="stylesheet" href="./mohammadfinal.css">
-  <title>Emoji Box</title>
+  <title>WHAT THE BOX</title>
 </head>
 <body>
   <header>
