--- a/team/musab/musab3.html
+++ b/team/musab/musab3.html
@@ -17,6 +17,11 @@
         <div id="demo"></div>
     </header>
     <main>
+
+
+
+
+        
         <div id="app">
             <div class="base-timer">
                 <svg class="base-timer__svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
@@ -54,6 +59,16 @@
         <img id="img1" src="https://thumbs.gfycat.com/DelayedVacantDassie-max-1mb.gif" alt="">
         <img id="img2" src="https://thumbs.gfycat.com/DelayedVacantDassie-max-1mb.gif" alt="">
         
+        <section id="alert">
+            <section id="alert-box">
+              <p id="alert-text"></p>
+              </br>
+              </br>
+              </br>
+              </br>
+              <button id="alert-button">OK</button>
+            </section>
+          </section>
     </main>
     <footer>
         <h1 id="footer">FOOTER</h1>
