update counter and title

--- a/team/dalia/dalia.html
+++ b/team/dalia/dalia.html
@@ -7,30 +7,30 @@
   <link rel="stylesheet" href="../../css/reset.css">
   <link rel="stylesheet" href="../../css/style.css">
   <link rel="stylesheet" href="./dalia.css">
-  <title>Box</title>
+  <title>WHAT THE BOX</title>
 </head>
 <body>
   <header>
     <h1><a href="../../index.html" id="home">WHAT THE BOX</a></h1>
-    <p id="level-tracker">level <span id="level"></span>/15</p>
+    <p id="level-tracker">level <span id="level"></span>/19</p>
   </header>
 
   <main id="main">
      <!--wrong answer alert-->
     <section class="alert" id="alert">
       <section class="alert-box" id="alert-box">
-        <p class="alert-text" id="alert-text">Think outside the box, baleez.</p>
+        <p class="alert-text" id="alert-text">THINK OUTSIDE THE BOX, Baleez.</p>
         </br>
-        <button id="alert-button" class="alert-button">I WILL THINK OUTSIDE THE BOX</button>
+        <button id="alert-button" class="alert-button">OKIE DOKIE, I WILL THINK OUTSIDE THE BOX</button>
       </section>
     </section>
 
     <!--correct answer alert-->
     <section class="alert" id="alertCorrect">
       <section class="alert-box" id="alertCorrect-box">
-        <p  class="alert-text" id="alertCorrect-text">CORRECT</p>
+        <p  class="alert-text" id="alertCorrect-text"> CORRECT, YOU NAILED IT !</p>
         </br>
-        <button class="alert-button" id="alertCorrect-button">NEXT</button>
+        <button class="alert-button" id="alertCorrect-button">EASY PEASY LEMON SQUEASY ... NEXT QUESTION</button>
       </section>
     </section>
 
