--- a/team/musab/musab.html
+++ b/team/musab/musab.html
@@ -8,19 +8,20 @@
   <link rel="stylesheet" href="../../css/reset.css">
   <link rel="stylesheet" href="../../css/style.css">
   <link rel="stylesheet" href="./musab.css">
-  <title>Box</title>
+  <title>WHAT THE BOX</title>
 </head>
 
 <body>
   <header>
-    <h1><a href="/team/">BOX</a></h1>
+    <h1><a href="../../index.html" id="home">WHAT THE BOX</a></h1>
+    <p id="level-tracker">level <span id="level"></span>/19</p>
   </header>
 
   <main>
-
-    <img src="/team/musab/img/Fanimation-Kwad-44-inch-1.gif" alt="" id="Fan">
-
     <div id="divo"></div>
+    <section id="overlay"></section>
+    <!-- <img src="/team/musab/img/Fanimation-Kwad-44-inch-1.gif" alt="" id="Fan"> -->
+
 
 
     <section id="alert">
@@ -57,7 +58,7 @@
       <section id="box4" class="box"></section>
 
       <section id="box5" class="box">
-        <div id="answers"></div>
+        
 
 
 
@@ -84,7 +85,14 @@
   </main>
 
   <footer>
-    <h1>FOOTER</h1>
+    <h1>WHAT THE BOX
+    </br></br>Developed by
+    </br>Ayah Abu Hammad
+    </br>Dalia Abdelghani
+    </br>Mohammad Amer
+    </br>Mus'ab Al-Omari
+    </br>Ali Sartawi
+    </br></br>&copy; 2021 201-project</h1>
   </footer>
   <script src="./musab.js"></script>
   <script src="../../js/app.js"></script>
