--- a/team/musab/musab1.html
+++ b/team/musab/musab1.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Calculator</title>
+    <title>WHAT THE BOX</title>
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="./musab1.css">
+    <link rel="stylesheet" href="./musabfinal.css">
 </head>
 
 <body>
-    <header>
-        <h1>BOX</h1>
-        <div id="answer"></div>
-    </header>
+  <header>
+    <h1><a href="../../index.html" id="home">WHAT THE BOX</a></h1>
+    <p id="level-tracker">level <span id="level"></span>/19</p>
+  </header>
     <main>
 
         <section id="alert">
@@ -81,9 +82,16 @@
         </section>
     </main>
     <footer>
-        <h1>FOOTER</h1>
-        <script src="./musab1.js"></script>
+      <h1>WHAT THE BOX
+      </br></br>Developed by
+      </br>Ayah Abu Hammad
+      </br>Dalia Abdelghani
+      </br>Mohammad Amer
+      </br>Mus'ab Al-Omari
+      </br>Ali Sartawi
+      </br></br>&copy; 2021 201-project</h1>
     </footer>
+      <script src="./musab1.js"></script>
 </body>
 
 </html>
