--- a/team/musab/musab3.html
+++ b/team/musab/musab3.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="./musab3.css">
-    <title>Box</title>
+    <link rel="stylesheet" href="./musabfinal.css">
+    <title>WHAT THE BOX</title>
 </head>
 
 <body id="dontClick">
-    <header>
-        <h1 id="heder1">BOX</h1>
-        <div id="demo"></div>
-    </header>
+  <header>
+    <h1><a href="../../index.html" id="home">WHAT THE BOX</a></h1>
+    <p id="level-tracker">level <span id="level"></span>/19</p>
+    <div id="demo"></div>
+  </header>
     <main>
 
 
@@ -46,9 +48,9 @@
     
                 <fieldset>
                     <label for="mosab"></label>
-                    <input type="button" value="take control on the plain">
-                    <input type="button" value="call your brother">
-                    <input type="button" value="search on the google for solutions">
+                    <input type="button" class="button" value="take control on the plain"></br>
+                    <input type="button" class="button"  value="call your brother"></br>
+                    <input type="button" class="button"  value="search on the google for solutions"></br>
     
                 </fieldset>
             </form>
@@ -71,9 +73,16 @@
           </section>
     </main>
     <footer>
-        <h1 id="footer">FOOTER</h1>
-        <script src="./musab3.js"></script>
+      <h1>WHAT THE BOX
+      </br></br>Developed by
+      </br>Ayah Abu Hammad
+      </br>Dalia Abdelghani
+      </br>Mohammad Amer
+      </br>Mus'ab Al-Omari
+      </br>Ali Sartawi
+      </br></br>&copy; 2021 201-project</h1>
     </footer>
+      <script src="./musab3.js"></script>
 
 </body>
 
